--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
   <div class="container-fluid art_pages">
     <div class="row">
       <div class="col-md">
-        <h1>| &nbsp about &nbsp |</h1>
+        <h1>about</h1>
       </div>
     </div>
 
