--- a/ceramics.html
+++ b/ceramics.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-    <h1>|  &nbsp  ceramics  &nbsp  |</h1>
+    <h1>ceramics</h1>
 
 <div class="container-fluid art_pages">
     <div class="row row1">
