--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <script src="https://unpkg.com/feather-icons"></script>
+  <link href="https://fonts.googleapis.com/css?family=Dosis|Open+Sans|Roboto|Saira+Extra+Condensed&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -24,7 +25,7 @@
       <div class="col-md-4 container mobile_column" id="thesis">
         <a href="thesis.html"><img src="img/thesis_crop.png" alt="a screenshot of a body of text which says 'can I play with an algorithm'" class="image">
           <div class="overlay">
-            <div class="text">Automating NYC
+            <div class="text">automating nyc
             </div>
         </a>
 
@@ -36,7 +37,7 @@
     <div class="col-md-4 container mobile_column" id="codeEnforcement">
       <a href="codeEnforcement.html"><img src="img/chris_index.png" alt="a screenshot of a body of text with the City of Boston logo in the top right" class="image">
         <div class="overlay">
-          <div class="text"> UX of Ticketing</div>
+          <div class="text"> ux of ticketing</div>
 
       </a>
     </div>
@@ -50,7 +51,7 @@
     <div class="col-md-4 container mobile_column" id="openMRS">
       <a href="subwayPacman.html"><img src="img/pacman_gif.gif" alt="a gif of the pacman game board in the shape of a subway station. Three pacpeople are moving throughout." class="image">
         <div class="overlay">
-          <div class="text">Subway Pacman</div>
+          <div class="text">subway pacman</div>
       </a>
     </div>
   </div>
@@ -58,7 +59,7 @@
   <div class="col-md-4 container mobile_column" id="photography">
     <a href="farmersMarket.html"><img src="img/MFM_crop.png" alt="a of a map of Massachusetts with several farmers markets highlighted" class="image">
       <div class="overlay">
-        <div class="text">Mapping Farmers Markets</div>
+        <div class="text">mapping farmers markets</div>
     </a>
   </div>
   </div>
@@ -73,7 +74,7 @@
     <div class="col-md-4 container mobile_column" id="openMRS">
       <a href="openMRS.html"><img src="img/openMRSscreenshot_crop.png" alt="a screenshot of webpage which says 'OpenMRS'" class="image">
         <div class="overlay">
-          <div class="text">Open Source Documentation</div>
+          <div class="text">open source documentation</div>
       </a>
     </div>
   </div>
@@ -81,7 +82,7 @@
   <div class="col-md-4 container mobile_column" id="photography">
     <a href="photography.html"><img src="img/bridge_crop.jpg" alt="a black and white photo of a bridge" class="image">
       <div class="overlay">
-        <div class="text">Photography</div>
+        <div class="text">photography</div>
     </a>
   </div>
   </div>
@@ -93,7 +94,7 @@
     <div class="col-md-4 container mobile_column" id="ceramics">
       <a href="ceramics.html"><img src="img/crackle_crop.jpg" alt="a deep blue ceramic bowl with crackled sides" class="image">
         <div class="overlay">
-          <div class="text">Ceramics </div>
+          <div class="text">ceramics </div>
       </a>
     </div>
   </div>
@@ -102,7 +103,7 @@
   <div class="col-md-4 container mobile_column" id="paintings">
     <a href="paintings.html"> <img src="img/painting_crop.jpg" alt="a mutli canvas painting in many colors with gold paper mâché" class="image">
       <div class="overlay">
-        <div class="text">Paintings</div>
+        <div class="text">paintings</div>
     </a>
   </div>
   </div>
