--- a/codeEnforcement.html
+++ b/codeEnforcement.html
@@ -16,7 +16,7 @@
 <body>
 
   <div class="container-fluid">
-    <h1>| &nbsp UX of Ticketing &nbsp |</h1>
+    <h1>ux of ticketing</h1>
 
     <div class="row  description_section">
       <div class="col"></div>
@@ -31,7 +31,7 @@
     <div class="row description_section">
       <div class="col"></div>
       <div class="col-md-2">
-        <h3> Client </h3>
+        <h3> client </h3>
       </div>
       <div class="col-md-4">
 
@@ -45,7 +45,7 @@
     <div class="row description_section">
       <div class="col"></div>
       <div class="col-md-2">
-        <h3> Problem </h3>
+        <h3> problem </h3>
       </div>
       <div class="col-md-4">
 
@@ -58,7 +58,7 @@
     <div class="row  description_section">
       <div class="col"></div>
       <div class="col-md-2">
-        <h3> Solution </h3>
+        <h3> solution </h3>
       </div>
       <div class="col-md-4">
 
@@ -87,7 +87,7 @@
     <div class="row  description_section">
       <div class="col"></div>
       <div class="col-md-2">
-        <h3> Process </h3>
+        <h3> process </h3>
       </div>
       <div class="col-md-4">
 
@@ -102,7 +102,7 @@
     <div class="row description_section">
       <div class="col"></div>
       <div class="col-md-2">
-        <h3> Tools </h3>
+        <h3> tools </h3>
       </div>
       <div class="col-md-4">
 
@@ -118,7 +118,7 @@
     <div class="row description_section">
       <div class="col"></div>
       <div class="col-md-2">
-        <h3> Team </h3>
+        <h3> team </h3>
       </div>
       <div class="col-md-4">
 
@@ -136,7 +136,7 @@
     <div class="row description_section">
       <div class="col"></div>
       <div class="col-md-2">
-        <h3> Learnings </h3>
+        <h3> learnings </h3>
       </div>
       <div class="col-md-4">
 
