--- a/farmersMarket.html
+++ b/farmersMarket.html
@@ -16,7 +16,7 @@
 <body>
 
   <div class="container-fluid">
-    <h1>| &nbsp Mapping Farmers Markets &nbsp |</h1>
+    <h1>mapping farmers markets</h1>
 
     <div class="row  description_section">
       <div class="col"></div>
@@ -29,7 +29,7 @@
     <div class="row description_section">
       <div class="col"></div>
       <div class="col-md-2">
-        <h3> Client </h3>
+        <h3> client </h3>
       </div>
       <div class="col-md-4">
 
@@ -43,7 +43,7 @@
     <div class="row description_section">
       <div class="col"></div>
       <div class="col-md-2">
-        <h3> Problem </h3>
+        <h3> problem </h3>
       </div>
       <div class="col-md-4">
 
@@ -56,7 +56,7 @@
     <div class="row  description_section">
       <div class="col"></div>
       <div class="col-md-2">
-        <h3> Solution </h3>
+        <h3> solution </h3>
       </div>
       <div class="col-md-4">
 
@@ -69,7 +69,7 @@
     <div class="row  description_section">
       <div class="col"></div>
       <div class="col-md-2">
-        <h3> Process </h3>
+        <h3> process </h3>
       </div>
       <div class="col-md-4">
 
@@ -82,7 +82,7 @@
     <div class="row description_section">
       <div class="col"></div>
       <div class="col-md-2">
-        <h3> Tools </h3>
+        <h3>tools </h3>
       </div>
       <div class="col-md-4">
 
@@ -98,7 +98,7 @@
     <div class="row description_section">
       <div class="col"></div>
       <div class="col-md-2">
-        <h3> Team </h3>
+        <h3> team </h3>
       </div>
       <div class="col-md-4">
 
@@ -114,7 +114,7 @@
     <div class="row description_section">
       <div class="col"></div>
       <div class="col-md-2">
-        <h3> Learnings </h3>
+        <h3> learnings </h3>
       </div>
       <div class="col-md-4">
 
