--- a/subwayPacman.html
+++ b/subwayPacman.html
@@ -16,7 +16,7 @@
 <body>
 
   <div class="container-fluid">
-    <h1>| &nbsp Subway Pacman &nbsp |</h1>
+    <h1>subway pacman</h1>
 
     <div class="row  description_section">
       <div class="col"></div>
@@ -31,7 +31,7 @@
     <div class="row description_section">
       <div class="col"></div>
       <div class="col-md-2">
-        <h3> Context </h3>
+        <h3> context </h3>
       </div>
       <div class="col-md-4">
 
@@ -48,7 +48,7 @@
     <div class="row description_section">
       <div class="col"></div>
       <div class="col-md-2">
-        <h3> Challenge </h3>
+        <h3> challenge </h3>
       </div>
       <div class="col-md-4">
 
@@ -61,7 +61,7 @@
     <div class="row  description_section">
       <div class="col"></div>
       <div class="col-md-2">
-        <h3> Solution </h3>
+        <h3> solution </h3>
       </div>
       <div class="col-md-4">
 
@@ -84,7 +84,7 @@
     <div class="row description_section">
       <div class="col"></div>
       <div class="col-md-2">
-        <h3> Play </h3>
+        <h3> play </h3>
       </div>
       <div class="col-md-4">
 
@@ -97,7 +97,7 @@
     <div class="row  description_section">
       <div class="col"></div>
       <div class="col-md-2">
-        <h3> Process </h3>
+        <h3> process </h3>
       </div>
       <div class="col-md-4">
 
@@ -121,7 +121,7 @@
     <div class="row description_section">
       <div class="col"></div>
       <div class="col-md-2">
-        <h3> Tools </h3>
+        <h3> tools </h3>
       </div>
       <div class="col-md-4">
 
@@ -138,7 +138,7 @@
     <div class="row description_section">
       <div class="col"></div>
       <div class="col-md-2">
-        <h3> Team </h3>
+        <h3> team </h3>
       </div>
       <div class="col-md-4">
 
