--- a/thesis.html
+++ b/thesis.html
@@ -16,8 +16,7 @@
 <body>
 
   <div class="container-fluid">
-    <h1>| &nbsp Automating NYC &nbsp |</h1>
-
+    <h1>automating nyc </h1>
     <div class="row  description_section">
       <div class="col"></div>
       <div class="col-md-6">
@@ -31,7 +30,7 @@
     <div class="row description_section">
       <div class="col"></div>
       <div class="col-md-2">
-        <h3> Client </h3>
+        <h3> client </h3>
       </div>
       <div class="col-md-4">
 
@@ -45,7 +44,7 @@
     <div class="row description_section">
       <div class="col"></div>
       <div class="col-md-2">
-        <h3> Problem </h3>
+        <h3> problem </h3>
       </div>
       <div class="col-md-4">
 
@@ -58,7 +57,7 @@
     <div class="row  description_section">
       <div class="col"></div>
       <div class="col-md-2">
-        <h3> Solution </h3>
+        <h3> solution </h3>
       </div>
       <div class="col-md-4">
 
@@ -71,7 +70,7 @@
     <div class="row  description_section">
       <div class="col"></div>
       <div class="col-md-2">
-        <h3> Process </h3>
+        <h3> process </h3>
       </div>
       <div class="col-md-4">
 
@@ -97,7 +96,7 @@
     <div class="row description_section">
       <div class="col"></div>
       <div class="col-md-2">
-        <h3> Tools </h3>
+        <h3> tools </h3>
       </div>
       <div class="col-md-4">
 
@@ -117,7 +116,7 @@
     <div class="row description_section">
       <div class="col"></div>
       <div class="col-md-2">
-        <h3> Team </h3>
+        <h3> team </h3>
       </div>
       <div class="col-md-4">
 
@@ -134,7 +133,7 @@
     <div class="row description_section">
       <div class="col"></div>
       <div class="col-md-2">
-        <h3> Press </h3>
+        <h3> press </h3>
       </div>
       <div class="col-md-4">
 
