added to trust patterns page

--- a/trustpatterns.html
+++ b/trustpatterns.html
@@ -76,7 +76,7 @@
 
           <p> Inspired by research into <a href="https://www.darkpatterns.org/" target="_blank">dark patterns</a>  (manipulative design decisions to trick users), we want to understand if there are design patterns that foster trust between users and messaging apps- even when those apps are insecure. We're especially interested in these trust patterns with journalists, who rely on these apps for extremely confidential information. </p>
 
-          <p> We're looking into both the cognitive processes involved in trust patterns (such as the language used), and the physical aesthetics (such as color).</p>
+          <p> We're looking into both the cognitive processes involved in trust patterns (such as the language used), and the physical aesthetics (such as color). Our findings are drawn from quantitative survey results, qualitative interviews, and current research in psychology and UI/UX design.</p>
 
           <p> You can read more about the research <a href="https://medium.com/digitalhks/meet-research-fellow-caroline-sinders-3fb4f8e6e4ee"> here</a>.</p>
       </div>
