adding data viz page

--- a/index.html
+++ b/index.html
@@ -48,13 +48,30 @@
   <div class="row  index_row">
     <div class="col-md"></div>
 
-    <div class="col-md-4 container mobile_column" id="openMRS">
-      <a href="subwayPacman.html"><img src="img/pacman_gif.gif" alt="a gif of the pacman game board in the shape of a subway station. Three pacpeople are moving throughout." class="image">
+    <div class="col-md-4 container mobile_column" id="designResearch">
+      <a href="trustpatterns.html"><img src="img/trustpatterns2.png" alt="text that says 'trust patterns' surrounded by three concentric rectangles in shades of grey" class="image">
         <div class="overlay">
-          <div class="text">subway pacman</div>
+          <div class="text">design research</div>
       </a>
     </div>
   </div>
+
+  <div class="col-md-4 container mobile_column" id="openMRS">
+    <a href="subwayPacman.html"><img src="img/pacman_gif.gif" alt="a gif of the pacman game board in the shape of a subway station. Three pacpeople are moving throughout." class="image">
+      <div class="overlay">
+        <div class="text">subway pacman</div>
+    </a>
+  </div>
+</div>
+
+
+  <div class="col-md"></div>
+  </div>
+
+  <div class="row  index_row">
+    <div class="col-md"></div>
+
+
 
   <div class="col-md-4 container mobile_column" id="photography">
     <a href="farmersMarket.html"><img src="img/MFM_crop.png" alt="a of a map of Massachusetts with several farmers markets highlighted" class="image">
@@ -63,6 +80,15 @@
     </a>
   </div>
   </div>
+
+  <div class="col-md-4 container mobile_column" id="migration">
+    <a href="dataViz.html"><img src="img/migration_square.png" alt="a map of the world with countries in different colors and a color scale corresponding to number of migrants" class="image">
+      <div class="overlay">
+        <div class="text">visualizing migration</div>
+    </a>
+  </div>
+  </div>
+
   <div class="col-md"></div>
   </div>
 
