updaing padding and data viz page

--- a/dataViz.html
+++ b/dataViz.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>Thesis</title>
+  <title>Work In the USA</title>
 
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link href="https://fonts.googleapis.com/css?family=Yrsa" rel="stylesheet">
@@ -30,7 +30,7 @@
     <div class="row description_section">
       <div class="col"></div>
       <div class="col-md-2">
-        <h3> client </h3>
+        <h3> context </h3>
       </div>
       <div class="col-md-4">
 
@@ -82,8 +82,8 @@
       <div class="col"></div>
 
       <div class="col-md-5">
-        <img src="img/avo_test.JPG" class="body_images_horizontal" alt="an image of a person sitting in front a table with pieces of paper in front of them. the papers have drawings of avocados on them.">
-        <p class="image_caption">Usability testing a paper prototype of the toy algorithm.</p>
+        <img src="img/viz_sketch.JPG" class="body_images_horizontal" alt="hand drawn sketches of six pages illustrating the storyboarding process">
+        <p class="image_caption">Sketching the initial interaction storyboard.</p>
       </div>
       <div class="col"></div>
     </div>
