--- a/trustpatterns.html
+++ b/trustpatterns.html
@@ -21,7 +21,7 @@
       <div class="col"></div>
       <div class="col-md-6">
 
-        <img src="img/trustpatterns.png" class="header_image trustpatternsimage" alt="text that says 'trust patterns' surrounded by three concentric rectangles in shades of grey">
+        <img src="img/trustpatterns.png" class="header_image  imagepadding trustpatternsimage" alt="text that says 'trust patterns' surrounded by three concentric rectangles in shades of grey">
 
       </div>
       <div class="col"></div>
