updating data viz page

--- a/dataViz.html
+++ b/dataViz.html
@@ -34,7 +34,7 @@
       </div>
       <div class="col-md-4">
 
-          <p> </p>
+          <p>This is my group final project for <a href="http://www.cs171.org/2018/" target="_blank">CS171: Visualization</a> at Harvard. </p>
 
       </div>
       <div class="col"></div>
@@ -57,9 +57,12 @@
     <div class="row  description_section">
       <div class="col"></div>
       <div class="col-md-2">
-        <h3> solution </h3>
+        <h3> interact </h3>
       </div>
       <div class="col-md-4">
+          <p class="desktop_only"> You can explore the visualizations <a href="https://seatuna.github.io/us-immigration-vis/" target="_blank">here.</a> </p>
+
+            <p class="mobile_only"> Unfortunately, the project isn't available on mobile right now. Check back later or explore on your desktop!</p>
 
 
       </div>
