updated text on the data viz page

--- a/dataViz.html
+++ b/dataViz.html
@@ -48,7 +48,7 @@
       </div>
       <div class="col-md-4">
 
-          <p> </p>
+          <p> How can we visualize trends in US visas over the past decade in a way that is interactive and story-based? </p>
 
       </div>
       <div class="col"></div>
@@ -75,7 +75,10 @@
         <h3> process </h3>
       </div>
       <div class="col-md-4">
-
+        <p> This project was created in an intensive sprint over the course of 3 weeks in November 2018. </p>
+        <p>In the first week, we compiled a number of open datasets from <a href="https://www.uscis.gov/tools/reports-studies/immigration-forms-data" target="_blank">US Citizenship and Immigration Services</a>.  We then explored the data
+in Tableau and sketched out storyboards to drive the design process. </p>
+<p> In the final two weeks of the sprint we wireframed and built the website, including usability testing at the end.</p>
 
       </div>
       <div class="col"></div>
@@ -104,6 +107,7 @@
             HTML + CSS <br>
             R <br>
             Python <br>
+            Tableau
 
           </p>
 
@@ -125,6 +129,23 @@
       </div>
       <div class="col"></div>
     </div>
+
+    <div class="row description_section">
+      <div class="col"></div>
+      <div class="col-md-2">
+        <h3> learnings </h3>
+      </div>
+      <div class="col-md-4">
+
+          <p>We did not prioritize user testing throughout our design process. As a result, we went through too few iteration cycles with our final project and the interactions were not as intuitive as we hoped. Retrospectively, we might have focused on fewer but more rigorously tested visualizations.</p>  
+
+
+      </div>
+      <div class="col"></div>
+    </div>
+
+
+
 
 
 
