--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
         </p>
 
         <p>
-          You can view my resume <a href= "img/ElyseVoegeliResumeMay2019.pdf">here</a>.
+          You can view my resume <a href= "img/ElyseVoegeliResume.pdf">here</a>.
         </p>
 
         <p class="icon_link"> <a href="https://github.com/evoeges" target="_blank"><i data-feather="github"></i></a>&nbsp;&nbsp;&nbsp;
