updated code enforcement link

--- a/codeEnforcement.html
+++ b/codeEnforcement.html
@@ -64,7 +64,7 @@
 
           <p> We focused on the physical touchpoints the city has with Boston residents when they receive a ticket. We redesigned the envelope and ticket using behavioral insights and design principles, created an education insert, redesigned the past-due letter and created a follow up letter, and redesigned the website flow to focus on a unified landing page.</p>
 
-          <p> View our redesigns and learn more <a href="https://docs.google.com/presentation/d/1R65Id3vE1gXoAOUWcZtrBoNcPPRhXprmJlgyYh6MEFc/edit?usp=sharing" target="_blank">here</a>.</p>
+          <p> View all of our redesigns and learn more <a href= "img/codeEnforcementPresentation.pdf">here</a>.</p>
 
       </div>
       <div class="col"></div>
