added user profiles to code enforcement

--- a/codeEnforcement.html
+++ b/codeEnforcement.html
@@ -99,6 +99,20 @@
       <div class="col"></div>
     </div>
 
+    <div class="row  description_section">
+      <div class="col"></div>
+
+      <div class="col-md-4">
+        <img src="img/userprofile1.png" class="body_images_horizontal profiles" alt="a green violation envelope">
+        <p class="image_caption">One of the five user profiles we developed.</p>
+      </div>
+      <div class="col-md-4">
+        <img src="img/userprofile2.png" class="body_images_horizontal profiles" alt="a red violation envelope">
+        <p class="image_caption">Another of the five user profiles we developed. </p>
+      </div>
+      <div class="col"></div>
+    </div>
+
     <div class="row description_section">
       <div class="col"></div>
       <div class="col-md-2">
