--- a/codeEnforcement.html
+++ b/codeEnforcement.html
@@ -108,7 +108,7 @@
       </div>
       <div class="col-md-4">
         <img src="img/userprofile2.png" class="body_images_horizontal profiles" alt="a red violation envelope">
-        <p class="image_caption">Another of the five user profiles we developed. </p>
+        <p class="image_caption">Another of our user profiles. </p>
       </div>
       <div class="col"></div>
     </div>
