--- a/codeEnforcement.html
+++ b/codeEnforcement.html
@@ -49,7 +49,7 @@
       </div>
       <div class="col-md-4">
 
-          <p> How might we spark behavior change in Boston Residents resulting in fewer tickets given and more tickets paid?</p>
+          <p> How might we spark behavior change in Boston residents resulting in fewer tickets given and more tickets paid?</p>
 
       </div>
       <div class="col"></div>
@@ -62,7 +62,7 @@
       </div>
       <div class="col-md-4">
 
-          <p> We focused on the physical touchpoints the city has with Boston residents when they receive a ticket. We redesigned the envelope and ticket using behavioral insights and design principles, created an education insert, redesigned the past-due letter and created a follow up letter, and redesigned the website flow to focus on a unified landing page.</p>
+          <p> We focused on the physical touchpoints the city has with Boston residents when they receive a ticket. We redesigned the envelope and ticket using behavioral insights and design principles, created an educational insert, redesigned the past-due letter and created a follow up letter, and redesigned the website flow to focus on a unified landing page.</p>
 
           <p> View all of our redesigns and learn more <a href= "img/codeEnforcementPresentation.pdf">here</a>.</p>
 
