--- a/index.html
+++ b/index.html
@@ -144,6 +144,14 @@
     </div>
   </div>
 
+  <div class="row  index_row">
+    <div class="col-md">
+      <a href="https://github.com/evoeges" target="_blank">
+        <p class="made_link">Made with <i data-feather="heart" class="heart_icon"></i> by yours truly. Check me out on GitHub!</p>
+      </a>
+    </div>
+  </div>
+
   </div>
 
   <!--feather icons library-->
