--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <script src="https://unpkg.com/feather-icons"></script>
+  <link rel="shortcut icon" href="img/favicon.png">
   <link href="https://fonts.googleapis.com/css?family=Dosis|Open+Sans|Roboto|Saira+Extra+Condensed&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
 </head>
