added colors to automating NYC

--- a/thesis.html
+++ b/thesis.html
@@ -27,6 +27,7 @@
       <div class="col"></div>
     </div>
 
+
     <div class="row description_section">
       <div class="col"></div>
       <div class="col-md-2">
@@ -63,6 +64,20 @@
 
           <p> We created <a href="https://automating.nyc/" target="_blank">Automating NYC</a> to open the black box around data, algorithms, and predictive analytics in city government and encourage people to advocate for automated decision systems that are designed with equity in mind.</p>
 
+      </div>
+      <div class="col"></div>
+    </div>
+
+    <div class="row  description_section">
+      <div class="col"></div>
+      <div class="col-md-2">
+        <h3> colors </h3>
+      </div>
+      <div class="col-md-4">
+
+        <img src="img/automatingnyccolors.png" class="swatch" alt="a screenshot of the skyline of New York City with text that says 'Automating NYC and (en)coding inequality?'">
+
+    
       </div>
       <div class="col"></div>
     </div>
