added insights to code enforcement page

--- a/codeEnforcement.html
+++ b/codeEnforcement.html
@@ -61,9 +61,24 @@
     <div class="row  description_section">
       <div class="col"></div>
       <div class="col-md-2">
+        <h3> insights </h3>
+      </div>
+      <div class="col-md-4">
+
+        <p> Our user research revealed three key insights. One, city residents did not understand their code enfocement responsibilities and the exact requirements to avoid code violations. Two, residents were mistrustful of the envelopes. Many people didn't realise this was an official envelope from the City of Boston and threw them away. Three, people found the tickets difficult to understand.</p>
+        <p> The key elements of our redesign were therefore authority, simplicity, and plain language.</p>
+
+      </div>
+      <div class="col"></div>
+    </div>
+
+    <div class="row  description_section">
+      <div class="col"></div>
+      <div class="col-md-2">
         <h3> solution </h3>
       </div>
       <div class="col-md-4">
+
 
           <p> We focused on the physical touchpoints the city has with Boston residents when they receive a ticket. We redesigned the envelope and ticket using behavioral insights and design principles, created an educational insert, redesigned the past-due letter and created a follow up letter, and redesigned the website flow to focus on a unified landing page.</p>
 
@@ -86,6 +101,20 @@
       </div>
       <div class="col"></div>
     </div>
+<!--
+    <div class="row  description_section">
+      <div class="col"></div>
+
+      <div class="col-md-4">
+        <img src="img/old_ticket.png"  alt="a green violation envelope">
+        <p class="image_caption">The original ticket.</p>
+      </div>
+      <div class="col-md-4">
+        <img src="img/new_ticket.png"  alt="a red violation envelope">
+        <p class="image_caption">The redesigned ticket.</p>
+      </div>
+      <div class="col"></div>
+    </div> -->
 
     <div class="row  description_section">
       <div class="col"></div>
