added filler for house bill and adoma project

--- a/index.html
+++ b/index.html
@@ -73,6 +73,32 @@
   <div class="col-md"></div>
   </div>
 
+  <div class="row index_row">
+    <div class="col-md"></div>
+    <div class="col-md-4 container mobile_column" id="adoma">
+      <a href=""><img src="img/.png" alt="" class="image">
+        <div class="overlay">
+          <div class="text">UX for Syrian refugees</div>
+
+
+    </div>
+      </a>
+
+  </div>
+
+
+  <div class="col-md-4 container mobile_column" id="bill">
+    <a href=".html"><img src="img/.png" alt="" class="image">
+      <div class="overlay">
+        <div class="text">HB.2998 Factsheet</div>
+
+
+  </div>
+    </a>
+</div>
+<div class="col-md"></div>
+</div>
+
   <div class="row  index_row">
     <div class="col-md"></div>
 
