added shell for house bill page

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <div class="col-md-4 container mobile_column" id="adoma">
       <a href=""><img src="img/.png" alt="" class="image">
         <div class="overlay">
-          <div class="text">UX for Syrian refugees</div>
+          <div class="text">ux for syrian refugees</div>
 
 
     </div>
@@ -87,12 +87,10 @@
   </div>
 
 
-  <div class="col-md-4 container mobile_column" id="bill">
-    <a href=".html"><img src="img/.png" alt="" class="image">
+  <div class="col-md-4 container mobile_column" id="houseBill">
+    <a href="houseBill.html"><img src="img/hb2998_cover.PNG" alt="" class="image">
       <div class="overlay">
-        <div class="text">HB.2998 Factsheet</div>
-
-
+        <div class="text">sexual assault factsheet</div>
   </div>
     </a>
 </div>
