added my name to team list

--- a/codeEnforcement.html
+++ b/codeEnforcement.html
@@ -171,6 +171,7 @@
           <p>Clare Herceg<br>
           Naeha Rashid<br>
           Ariana Soto<br>
+          Elyse Voegeli<br>
           Clarisa Yerovi</p>
 
       </div>
