--- a/dataViz.html
+++ b/dataViz.html
@@ -122,8 +122,9 @@ in Tableau and sketched out storyboards to drive the design process. </p>
       </div>
       <div class="col-md-4">
 
-          <p>Celena Toon<br>
-        Prathapan Thiru<br>
+          <p>Prathapan Thiru<br>
+            Celena Toon<br>
+        Elyse Voegeli</p>
 
 
       </div>
@@ -137,7 +138,7 @@ in Tableau and sketched out storyboards to drive the design process. </p>
       </div>
       <div class="col-md-4">
 
-          <p>We did not prioritize user testing throughout our design process. As a result, we went through too few iteration cycles with our final project and the interactions were not as intuitive as we hoped. Retrospectively, we might have focused on fewer but more rigorously tested visualizations.</p>  
+          <p>We did not prioritize user testing throughout our design process. As a result, we went through too few iteration cycles with our final project and the interactions were not as intuitive as we hoped. Retrospectively, we might have focused on fewer but more rigorously tested visualizations.</p>
 
 
       </div>
