--- a/farmersMarket.html
+++ b/farmersMarket.html
@@ -102,8 +102,9 @@
       </div>
       <div class="col-md-4">
 
-          <p>Elsa Itambo<br>
-          Howard DaCosta</p>
+          <p> Howard DaCosta<br>
+            Elsa Itambo<br>
+          Elyse Voegeli</p>
 
       </div>
       <div class="col"></div>
