--- a/houseBill.html
+++ b/houseBill.html
@@ -134,7 +134,9 @@
       </div>
       <div class="col-md-4">
 
-          <p>Ceci Coquilette</p>
+          <p>Ceci Coquilette<br>
+          Elyse Voegeli</p>
+
 
       </div>
       <div class="col"></div>
