--- a/openMRS.html
+++ b/openMRS.html
@@ -94,7 +94,8 @@
           Eric Holscher<br>
           Suranga Nath Kasthurirathne<br>
           Daniel Kayiwa<br>
-          Jordan Kellerstrass</p>
+          Jordan Kellerstrass<br>
+          Elyse Voegeli</p>
 
       </div>
       <div class="col"></div>
