--- a/subwayPacman.html
+++ b/subwayPacman.html
@@ -142,8 +142,9 @@
       </div>
       <div class="col-md-4">
 
-          <p>Kelvin Tejeda<br>
-          Melissa Kwan<br>
+          <p>Melissa Kwan<br>
+            Kelvin Tejeda<br>
+          Elyse Voegeli<br>
 
       </div>
       <div class="col"></div>
