--- a/thesis.html
+++ b/thesis.html
@@ -77,7 +77,7 @@
 
         <img src="img/automatingnyccolors.png" class="swatch" alt="a screenshot of the skyline of New York City with text that says 'Automating NYC and (en)coding inequality?'">
 
-    
+
       </div>
       <div class="col"></div>
     </div>
@@ -135,9 +135,11 @@
       </div>
       <div class="col-md-4">
 
-          <p>Aki Younge<br>
+          <p>  Jon Truong<br>
+                Elyse Voegeli<br>
+            Aki Younge<br>
           Deepra Yusuf<br>
-          Jon Truong<br></p>
+        </p>
 
       </div>
       <div class="col"></div>
