--- a/trustpatterns.html
+++ b/trustpatterns.html
@@ -91,8 +91,11 @@
       </div>
       <div class="col-md-4">
 
-          <p>Caroline Sinders (principal researcher)<br>
-          Vandinika Shukla
+          <p>      Vandinika Shukla<br>
+            Caroline Sinders<br>
+
+    
+              Elyse Voegeli<br>
       </div>
       <div class="col"></div>
     </div>
