--- a/adoma.html
+++ b/adoma.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>Code Enforcement</title>
+  <title>Adoma</title>
 
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link href="https://fonts.googleapis.com/css?family=Yrsa" rel="stylesheet">
@@ -19,14 +19,13 @@
   <div class="container-fluid">
 
 
-    <h1>ux of ticketing</h1>
+    <h1>ux for syrian refugees</h1>
 
     <div class="row  description_section">
       <div class="col"></div>
       <div class="col-md-6">
-        <a href="https://innovategovernment.org/boston-code-blog-2019" target="_blank">
-        <img src="img/chris.png" class="header_image" alt="a screenshot of an image that says 'meet Chris' and tells the story of Chris's fall on unshoveled snow.">
-      </a>
+          <img src="img/FXB Timeline.png" class="header_image" alt="two timelines of the research project in english and french">
+
       </div>
       <div class="col"></div>
     </div>
@@ -38,7 +37,7 @@
       </div>
       <div class="col-md-4">
 
-          <p> <a href="https://www.boston.gov/departments/public-works/how-we-keep-boston-clean" target="_blank"> Boston Code Enforcement </a> is a division of the Department of Public Works which monitors the city and gives out tickets for code violations (for example, improper shoveling of snow).</p>
+          <p> <a href="https://www.adoma.cdc-habitat.fr/adoma/Accueil/p-730-Vivez-l-habitat-solidaire.htm" target="_blank"> Adoma </a> is a semi public housing provider in France. The <a href="https://fxb.harvard.edu/" target="_blank">Harvard FXB Center for Health and Human Rights</a> sponsored me to evaluate the user experience of Syrian refugee families in a pilot program in Toulouse, France.</p>
 
       </div>
       <div class="col"></div>
@@ -52,7 +51,7 @@
       </div>
       <div class="col-md-4">
 
-          <p> How might we spark behavior change in Boston residents resulting in fewer tickets given and more tickets paid?</p>
+          <p> How can we improve the experience of newly migrated Syrian refugee families in Toulouse, France?</p>
 
       </div>
       <div class="col"></div>
@@ -65,8 +64,7 @@
       </div>
       <div class="col-md-4">
 
-        <p> Our user research revealed three key insights. One, city residents did not understand their code enfocement responsibilities and the exact requirements to avoid code violations. Two, residents were mistrustful of the envelopes. Many people didn't realise this was an official envelope from the City of Boston and threw them away. Three, people found the tickets difficult to understand.</p>
-        <p> The key elements of our redesign were therefore authority, simplicity, and plain language.</p>
+        <p> </p>
 
       </div>
       <div class="col"></div>
@@ -80,41 +78,12 @@
       <div class="col-md-4">
 
 
-          <p> We focused on the physical touchpoints the city has with Boston residents when they receive a ticket. We redesigned the envelope and ticket using behavioral insights and design principles, created an educational insert, redesigned the past-due letter and created a follow up letter, and redesigned the website flow to focus on a unified landing page.</p>
-
-          <p> View all of our redesigns and learn more <a href= "img/CodeEnforcementPresentation.pdf">here</a>.</p>
+          <p> </p>
 
       </div>
       <div class="col"></div>
     </div>
 
-    <div class="row  description_section">
-      <div class="col"></div>
-
-      <div class="col-md-4">
-        <img src="img/originalenvelope.png" class="body_images_horizontal" alt="a green violation envelope">
-        <p class="image_caption">The original envelope.</p>
-      </div>
-      <div class="col-md-4">
-        <img src="img/newenvelope.png" class="body_images_horizontal" alt="a red violation envelope">
-        <p class="image_caption">The redesigned envelope.</p>
-      </div>
-      <div class="col"></div>
-    </div>
-<!--
-    <div class="row  description_section">
-      <div class="col"></div>
-
-      <div class="col-md-4">
-        <img src="img/old_ticket.png"  alt="a green violation envelope">
-        <p class="image_caption">The original ticket.</p>
-      </div>
-      <div class="col-md-4">
-        <img src="img/new_ticket.png"  alt="a red violation envelope">
-        <p class="image_caption">The redesigned ticket.</p>
-      </div>
-      <div class="col"></div>
-    </div> -->
 
     <div class="row  description_section">
       <div class="col"></div>
@@ -123,27 +92,12 @@
       </div>
       <div class="col-md-4">
 
-          <p> <strong> User Research </strong> From January through March 2019 we did background research through data analysis, best practices in other cities, ride alongs with officers, and interviews/observations with users (Boston residents) interacting with Code Enforcement.  </p>
-          <p> <strong> Prototyping </strong> In March through May, we brainstormed solutions and prototyped our 5 touchpoints. We created lo-fi versions of each idea and tested them in the real world, updating and improving each time. Some of the designs went through as many as 8 iterations and 58 user interviews.  </p>
-          <p> In May we settled on our final versions and handed them off to the city where they'll be rolled out to over 600,000 Boston residents. </p>
-          <p> Learn more about our process <a href="https://innovategovernment.org/boston-code-blog-2019" target="_blank">here</a>.</p>
+          <p> </p>
       </div>
       <div class="col"></div>
     </div>
 
-    <div class="row  description_section">
-      <div class="col"></div>
 
-      <div class="col-md-4">
-        <img src="img/userprofile1.png" class="body_images_horizontal profiles" alt="a green violation envelope">
-        <p class="image_caption">One of the five user profiles we developed.</p>
-      </div>
-      <div class="col-md-4">
-        <img src="img/userprofile2.png" class="body_images_horizontal profiles" alt="a red violation envelope">
-        <p class="image_caption">Another of our user profiles. </p>
-      </div>
-      <div class="col"></div>
-    </div>
 
     <div class="row description_section">
       <div class="col"></div>
@@ -152,9 +106,7 @@
       </div>
       <div class="col-md-4">
 
-          <p> Inkscape <br>
-            Adobe Illustrator <br>
-            Tableau <br>
+          <p>
           </p>
 
       </div>
@@ -168,11 +120,7 @@
       </div>
       <div class="col-md-4">
 
-          <p>Clare Herceg<br>
-          Naeha Rashid<br>
-          Ariana Soto<br>
-          Elyse Voegeli<br>
-          Clarisa Yerovi</p>
+          <p>Elyse Voegeli</p>
 
       </div>
       <div class="col"></div>
@@ -187,7 +135,7 @@
       </div>
       <div class="col-md-4">
 
-          <p> This project was a careful balance between practical solutions and big-picture systems thinking. Balancing the needs of the client while keeping the end user in mind was a rewarding challenge.</p>
+          <p> </p>
 
       </div>
       <div class="col"></div>
