--- a/thesis.html
+++ b/thesis.html
@@ -71,6 +71,20 @@
     <div class="row  description_section">
       <div class="col"></div>
       <div class="col-md-2">
+        <h3> interact </h3>
+      </div>
+      <div class="col-md-4">
+
+        <p>Explore Automating NYC <a href="https://automating.nyc/" target="_blank">here</a>.</p>
+
+
+      </div>
+      <div class="col"></div>
+    </div>
+
+    <div class="row  description_section">
+      <div class="col"></div>
+      <div class="col-md-2">
         <h3> colors </h3>
       </div>
       <div class="col-md-4">
@@ -156,6 +170,7 @@
 
           <p>  <a href="https://www.fastcompany.com/90351049/whats-an-algorithm-let-an-avocado-explain" target="_blank"><em>What’s an algorithm? Let an avocado explain.</em> Fast Company.</a>
 </p>
+
 
       </div>
       <div class="col"></div>
