added new resume

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
   <div class="row index_row">
     <div class="col-md"></div>
     <div class="col-md-4 container mobile_column" id="adoma">
-      <a href="adoma.html"><img src="img/toulouse.jpg" alt="an image of a sunny street in france with pink buildings" class="image">
+      <a href="adoma.html"><img src="img/rima.png" alt="an image of a sunny street in france with pink buildings" class="image">
         <div class="overlay">
           <div class="text">ux for syrian refugees</div>
 
@@ -90,7 +90,7 @@
   <div class="col-md-4 container mobile_column" id="houseBill">
     <a href="houseBill.html"><img src="img/hb2998_cover.PNG" alt="an image of varied sized circles in different shades of red" class="image">
       <div class="overlay">
-        <div class="text">sexual assault factsheet</div>
+        <div class="text">house bill factsheet</div>
   </div>
     </a>
 </div>
