--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
   <div class="col-md"></div>
   </div>
 
-  <div class="row index_row">
+<!--  <div class="row index_row">
     <div class="col-md"></div>
     <div class="col-md-4 container mobile_column" id="adoma">
       <a href="adoma.html"><img src="img/rima.png" alt="an image of a sunny street in france with pink buildings" class="image">
@@ -95,7 +95,7 @@
     </a>
 </div>
 <div class="col-md"></div>
-</div>
+</div> -->
 
   <div class="row  index_row">
     <div class="col-md"></div>
