added a page for designs

--- a/design.html
+++ b/design.html
@@ -13,18 +13,72 @@
 
 <body>
 
-  <h1>| &nbsp coming soon &nbsp |</h1>
+  <h1>| &nbsp design &nbsp |</h1>
 
-  <div class="container-fluid">
 
-    <div class="row rowbottom align-items-center">
+    <div class="container-fluid art_pages">
+
+      <div class="row row4">
+        <div class="col-md-6 container" id="design">
+          <img src="img/design/dumplings.png" alt="a set of icons depicting eight different dumplings" class="art_image">
+          <div class="overlay">
+            <div class="text"> dumpling icons </div>
+          </div>
+        </div>
+
+        <div class="col-md-6 container" id="design">
+          <img src="img/design/hop_logo.png" alt="a teal icon which says 'hop', the 'o' is a map marker with rainbow colors" class="art_image">
+          <div class="overlay">
+            <div class="text"> logo for an lgbtq travel app </div>
+          </div>
+        </div>
+
+
+      </div>
+
+      <div class="row row4">
+        <div class="col-md-6 container" id="design">
+          <img src="img/design/009 music player.png" alt="a music player screenshot with 'make me feel' by janelle monae" class="art_image">
+          <div class="overlay">
+            <div class="text">a music player</div>
+          </div>
+        </div>
+
+        <div class="col-md-6 container" id="design">
+          <img src="img/design/005_appicon.png" alt="a blue icon with two red and orange circles overlapping" class="art_image">
+          <div class="overlay">
+            <div class="text">an app icon</div>
+          </div>
+        </div>
+
+
+      </div>
+
+      <div class="row rowbottom">
+        <div class="col-md-6 container" id="design">
+          <img src="img/design/002_creditcardscreen.png" alt="two screenshots of a payment and confirmation page for credit cards" class="art_image">
+          <div class="overlay">
+            <div class="text">a credit card payment screen</div>
+          </div>
+        </div>
+
+        <div class="col-md-6 container" id="design">
+          <img src="img/design/001_loginscreen.png" alt="a set of three screenshots for a page to log in or create an account" class="art_image">
+          <div class="overlay">
+            <div class="text">a log in screen</div>
+          </div>
+        </div>
+
+
+      </div>
+
+
+
+
 
 
     </div>
 
-
-  </div>
-  </div>
   <script src="js/jquery.min.js"></script>
   <script src="js/popper.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
