added designs to design page

--- a/design.html
+++ b/design.html
@@ -54,7 +54,7 @@
 
       </div>
 
-      <div class="row rowbottom">
+      <div class="row row4">
         <div class="col-md-6 container" id="design">
           <img src="img/design/002_creditcardscreen.png" alt="two screenshots of a payment and confirmation page for credit cards" class="art_image">
           <div class="overlay">
@@ -72,7 +72,23 @@
 
       </div>
 
+      <div class="row rowbottom">
+        <div class="col-md-6 container" id="design">
+          <img src="img/design/008_404.png" alt="a screenshot of a page with a cartoon octopus that says '404 page not found'" class="art_image">
+          <div class="overlay">
+            <div class="text">a 404 page</div>
+          </div>
+        </div>
 
+        <div class="col-md-6 container" id="design">
+          <img src="img/design/004.png" alt="a screen shot of a navy blue calculator app which looks like a clockface" class="art_image">
+          <div class="overlay">
+            <div class="text">a calculator app</div>
+          </div>
+        </div>
+
+
+      </div>
 
 
 
