added design to homepage

--- a/index.html
+++ b/index.html
@@ -137,10 +137,10 @@
       </a>
   </div>
 
-  <div class="col-md-4 container mobile_column" id="photography">
-    <a href="photography.html"><img src="img/bridge_crop.jpg" alt="a black and white photo of a bridge" class="image">
+  <div class="col-md-4 container mobile_column" id="design">
+    <a href="design.html"><img src="img/design_page.png" alt="an abstract digital image of three red and orange circles on a navy background" class="image">
       <div class="overlay">
-        <div class="text">photography</div>
+        <div class="text">design</div>
 
   </div>
   </a>
@@ -148,7 +148,7 @@
   <div class="col-md"></div>
   </div>
 
-  <div class="row  index_row rowbottom">
+  <div class="row  index_row">
     <div class="col-md"></div>
     <div class="col-md-4 container mobile_column" id="ceramics">
       <a href="ceramics.html"><img src="img/crackle_crop.jpg" alt="a deep blue ceramic bowl with crackled sides" class="image">
@@ -167,6 +167,21 @@
 
   </div>
     </a>
+  </div>
+  <div class="col-md"></div>
+  </div>
+
+  <div class="row  index_row rowbottom">
+    <div class="col-md"></div>
+
+
+  <div class="col-md-4 container mobile_column" id="photography">
+    <a href="photography.html"><img src="img/bridge_crop.jpg" alt="a black and white photo of a bridge" class="image">
+      <div class="overlay">
+        <div class="text">photography</div>
+
+  </div>
+  </a>
   </div>
   <div class="col-md"></div>
   </div>
