fixed typo on about page

--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
       <div class="col-md-3"></div>
       <div class="col-md-6 about">
         <p>
-          I am a data analyst and designer committed to making to make tech accessible, accountable, and delightful.</p>
+          I am a data analyst and designer committed to making civic tech accessible, accountable, and delightful.</p>
           <p>I work at the intersection of tech and public policy, combining my years of research experience with a lifelong passion for visual art.</p>
           <p> My work ranges from data visualization to mitigating algorithmic bias in machine learning to human-centered design in civic tech. </p>
         <p>
