--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
   <div class="col-md-4 container mobile_column" id="design">
     <a href="design.html"><img src="img/design_page.png" alt="an abstract digital image of three red and orange circles on a navy background" class="image">
       <div class="overlay">
-        <div class="text">design</div>
+        <div class="text">doodles</div>
 
   </div>
   </a>
