--- a/design.html
+++ b/design.html
@@ -13,7 +13,7 @@
 
 <body>
 
-  <h1>| &nbsp design &nbsp |</h1>
+  <h1>| &nbsp doodles &nbsp |</h1>
 
 
     <div class="container-fluid art_pages">
