updated thesis + trust patterins

--- a/thesis.html
+++ b/thesis.html
@@ -168,9 +168,10 @@
       </div>
       <div class="col-md-4">
 
-          <p>  <a href="https://www.fastcompany.com/90351049/whats-an-algorithm-let-an-avocado-explain" target="_blank"><em>What’s an algorithm? Let an avocado explain.</em> Fast Company.</a>
+          <p>  <a href="https://www.fastcompany.com/90351049/whats-an-algorithm-let-an-avocado-explain" target="_blank"><em>What’s an algorithm? Let an avocado explain.</em></a> Fast Company
 </p>
-
+<p>  Featured in<a href="https://www.aisp.upenn.edu/centering-equity/" target="_blank"> <em>A Toolkit for Centering Racial Equity Throughout Data Integration </em></a> from Actionable Intelligence for Social Policy (AISP) at the University of Pennsylvania
+</p>
 
       </div>
       <div class="col"></div>
