--- a/trustpatterns.html
+++ b/trustpatterns.html
@@ -61,7 +61,7 @@
       </div>
       <div class="col-md-4">
 
-          <p> This project is currently ongoing! Check back in September 2019 to view our research findings.</p>
+          <p> Read the full research findings, <a href="https://commonplace.knowledgefutures.org/pub/trust-through-trickery/release/1" target="_blank"> Trust Through Trickery</a> at Common Place. </p>
 
       </div>
       <div class="col"></div>
@@ -94,7 +94,7 @@
           <p>      Vandinika Shukla<br>
             Caroline Sinders<br>
 
-    
+
               Elyse Voegeli<br>
       </div>
       <div class="col"></div>
