--- a/about.html
+++ b/about.html
@@ -38,12 +38,12 @@
           You can view my resume <a href= "img/ElyseVoegeliResume.pdf">here</a>.
         </p>
 
-        <p class="icon_link"> <a href="https://github.com/evoeges" target="_blank"><i data-feather="github"></i></a>&nbsp;&nbsp;&nbsp;
-        <a href="https://www.linkedin.com/in/elyse-voegeli-037781124/" target="_blank"><i data-feather="linkedin"></i></a>
+        <p class="icon_link"> <a href="https://github.com/evoeges" target="_blank"><i data-feather="github" aria-label="Link to Github"></i></a>&nbsp;&nbsp;&nbsp;
+        <a href="https://www.linkedin.com/in/elyse-voegeli-037781124/" target="_blank"><i data-feather="linkedin" aria-label="Link to LinkedIn"></i></a>
         &nbsp;&nbsp;&nbsp;
-        <a href="https://twitter.com/evogues" target="_blank"><i data-feather="twitter"></i></a>
+        <a href="https://twitter.com/evogues" target="_blank"><i data-feather="twitter" aria-label="Link to Twitter"></i></a>
         &nbsp;&nbsp;&nbsp;
-        <a href="https://www.instagram.com/evogues/" target="_blank"><i data-feather="instagram"></i></a></p>
+        <a href="https://www.instagram.com/evogues/" target="_blank"><i data-feather="instagram" aria-label="Link to Instagram"></i></a></p>
 
       </div>
 
