--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 
 <body>
 
-  <a href="about.html">
-    <h2>| &nbsp elyse voegeli &nbsp |</h2>
-  </a>
+
+    <h1 ><a href="about.html" id="about_link">elyse voegeli</a></h1>
+
 
   <div class="container-fluid">
     <div class="row index_row">
