--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
 
 
-    <h1 ><a href="about.html" id="about_link">elyse voegeli</a></h1>
+    <h1 ><a href="about.html" class="about_link">elyse voegeli</a></h1>
 
 
   <div class="container-fluid">
