--- a/index.html
+++ b/index.html
@@ -12,10 +12,8 @@
   <link rel="shortcut icon" href="img/favicon.png">
   <link href="https://fonts.googleapis.com/css?family=Dosis|Open+Sans|Roboto|Saira+Extra+Condensed&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
-
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-
+  <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet"> 
 </head>
 
 <body>
