--- a/index2.0.html
+++ b/index2.0.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+
+<!-- Excuse my messy code! Check me out on github to see some of my other projects with *slightly* less messy code-->
 <html lang="en">
 
 <head>
@@ -42,16 +44,16 @@
       <div class="col-md-6 order-md-1 index_column_left">
         <div class="toc">
         <h2 class="index_list"><a href="10K.html">Data Capitalism</a></h2>
-        <p >user-friendly and accessible microsite for Data 4 Black Lives</p>
+        <p> <em>user-friendly and accessible microsite for Data 4 Black Lives</em></p>
         <p class="tags">  user research + UI/UX design + illustration + development</p>
-        <h2 class="index_list"><a href="10K.html">10K Tablets</a></h2>
-        <p>data and design to bring older adults online </p>
+        <h2 class="index_list"><a href="10KTablets.html">10K Tablets</a></h2>
+        <p><em>data and design to bring older adults online </em></p>
         <p class="tags">  user research + service design + UI/UX design + data viz</p>
         <h2 class="index_list"><a href="thesis.html">Automating.NYC</a></h2>
-        <p>interactive storytelling website about predictive analytics in city government </p>
+        <p><em>interactive storytelling website about predictive analytics in city government </em></p>
         <p class="tags">  user research + UI/UX design + development + data analysis</p>
         <h2 class="index_list"><a href="codeEnforcement.html">UX of Ticketing</a></h2>
-        <p>re-design of Boston's code enforcement ticketing touchpoints <p>
+        <p><em>re-design of Boston's code enforcement ticketing touchpoints</em> <p>
         <p class="tags">  user research + service design + graphic design</p>
   <!--      <h2><a href="trustpatterns.html">trust patterns</a></h2>
         <p>re-design of Boston's ticketing touchpoints </p>
@@ -63,9 +65,9 @@
         <p>creation of a new developer guide for a FLOSS software <p>
         <p><em>  user research + documentation</em></p> -->
         <h2><a href="ceramics.html">ceramics</a></h2>
-        <p>just for fun<p>
+        <p><em>just for fun</em><p>
         <h2><a href="photography.html">photography</a></h2>
-        <p>only a couple of cats<p>
+        <p><em>only a couple of cats</em><p>
         </div>
 
       </div>
