--- a/thesis.html
+++ b/thesis.html
@@ -5,21 +5,25 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>Thesis</title>
+  <title>Automating.NYC</title>
 
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link href="https://fonts.googleapis.com/css?family=Yrsa" rel="stylesheet">
   <script src="https://unpkg.com/feather-icons"></script>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style2.0.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+ <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono:wght@400;700&display=swap" rel="stylesheet">
 
 </head>
 
 <body>
 
   <div class="container-fluid">
-    <h1>automating nyc </h1>
+    <h1>automating.nyc </h1>
     <div class="row  description_section">
       <div class="col"></div>
       <div class="col-md-6">
@@ -65,7 +69,7 @@
       </div>
       <div class="col-md-4">
 
-          <p> We created <a href="https://automating.nyc/" target="_blank">Automating NYC</a> to open the black box around data, algorithms, and predictive analytics in city government and encourage people to advocate for automated decision systems that are designed with equity in mind.</p>
+          <p> We created <a href="https://automating.nyc/" target="_blank">Automating.NYC</a> to open the black box around data, algorithms, and predictive analytics in city government and encourage people to advocate for automated decision systems that are designed with equity in mind.</p>
 
       </div>
       <div class="col"></div>
@@ -78,7 +82,7 @@
       </div>
       <div class="col-md-4">
 
-        <p>Explore Automating NYC <a href="https://automating.nyc/" target="_blank">here</a>.</p>
+        <p>Explore Automating.NYC <a href="https://automating.nyc/" target="_blank">here</a>.</p>
 
 
       </div>
@@ -176,7 +180,7 @@
 <p>  Featured in<a href="https://www.aisp.upenn.edu/centering-equity/" target="_blank"> <em>A Toolkit for Centering Racial Equity Throughout Data Integration </em></a> from Actionable Intelligence for Social Policy (AISP) at the University of Pennsylvania
 </p>
 
-<p>Featured in<a href="https://datajusticelab.org/towards-democratic-auditing-civic-participation-in-the-scoring-society/">Critical Data Literacy Tools: A Guidebook</a> from the Data Justice Lab at the University of Cardiff</p>
+<p>Featured in<a href="https://datajusticelab.org/towards-democratic-auditing-civic-participation-in-the-scoring-society/"> Critical Data Literacy Tools: A Guidebook</a> from the Data Justice Lab at the University of Cardiff</p>
 
       </div>
       <div class="col"></div>
