--- a/index.html
+++ b/index.html
@@ -1,195 +1,77 @@
 <!DOCTYPE html>
+
+<!-- Excuse my messy code! Check me out on github to see some of my other projects with *slightly* less messy code-->
 <html lang="en">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-  <title>Portfolio</title>
+  <title>portfolio</title>
 
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <script src="https://unpkg.com/feather-icons"></script>
   <link rel="shortcut icon" href="img/favicon.png">
   <link href="https://fonts.googleapis.com/css?family=Dosis|Open+Sans|Roboto|Saira+Extra+Condensed&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Slabo+27px&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet"> 
+  <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+ <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
 
+  <div class="container-fluid ">
+    <div class="row align-items-center main_page">
+      <div class="col-md-6 order-md-2 index_column_right">
+        <div class="intro">
+          <img src="img/Elyse_Profile_Round.png" alt="Elyse is a white woman with short blonde hair in a velvet rust-colored top. She is holding her cat, Zuzu, in the air." class="profile_image">
 
-    <h1 ><a href="about.html" class="about_link">elyse voegeli</a></h1>
+          <h1>Elyse Voegeli</h1>
 
-
-  <div class="container-fluid">
-    <div class="row index_row">
-      <div class="col-md"></div>
-      <div class="col-md-4 container mobile_column" id="thesis">
-        <a href="thesis.html"><img src="img/thesis_crop.png" alt="a screenshot of a body of text which says 'can I play with an algorithm'" class="image">
-          <div class="overlay">
-            <div class="text">automating nyc
-            </div>
-
+            <p>I am a designer and data analyst committed to making tech accessible, accountable, and delightful. </p>
+        <p> In my free time, I enjoy taking care of my 77 pandemic plants, reading queer fantasy novels, and making cat puns. I apawlogize in advance.</p>
+        <p class="icon_link"> <a href="https://github.com/evoeges" target="_blank"><i data-feather="github"></i></a>&nbsp;&nbsp;&nbsp;
+        <a href="https://www.linkedin.com/in/elyse-voegeli-037781124/" target="_blank"><i data-feather="linkedin"></i></a>
+        &nbsp;&nbsp;&nbsp;
+        <a href="https://twitter.com/evogues" target="_blank"><i data-feather="twitter"></i></a>
+        &nbsp;&nbsp;&nbsp;
+        <a href="https://www.instagram.com/evogues/" target="_blank"><i data-feather="instagram"></i></a></p>
+      </div>
+      </div>
+      <div class="col-md-6 order-md-1 index_column_left">
+        <div class="toc">
+        <h2 class="index_list"><a href="10K.html">Data Capitalism</a></h2>
+        <p> <em>user-friendly and accessible microsite for Data 4 Black Lives</em></p>
+        <p class="tags">  user research + UI/UX design + illustration + development</p>
+        <h2 class="index_list"><a href="10KTablets.html">10K Tablets</a></h2>
+        <p><em>data and design to bring older adults online </em></p>
+        <p class="tags">  user research + service design + UI/UX design + data viz</p>
+        <h2 class="index_list"><a href="thesis.html">Automating.NYC</a></h2>
+        <p><em>interactive storytelling website about predictive analytics in city government </em></p>
+        <p class="tags">  user research + UI/UX design + development + data analysis</p>
+        <h2 class="index_list"><a href="codeEnforcement.html">UX of Ticketing</a></h2>
+        <p><em>re-design of Boston's code enforcement ticketing touchpoints</em> <p>
+        <p class="tags">  user research + service design + graphic design</p>
+  <!--      <h2><a href="trustpatterns.html">trust patterns</a></h2>
+        <p>re-design of Boston's ticketing touchpoints </p>
+        <p><em>  user research + service design + graphic design</em></p>
+        <h2><a href="subwayPacman.html">subway pacman</a></h2>
+        <p>interactive game concept for subways </p>
+        <p><em>  interaction design + graphic design</em></p>
+        <h2><a href="openMRS.html">open source documentation</a></h2>
+        <p>creation of a new developer guide for a FLOSS software <p>
+        <p><em>  user research + documentation</em></p> -->
+        <h2><a href="ceramics.html">ceramics</a></h2>
+        <p><em>just for fun</em><p>
+        <h2><a href="photography.html">photography</a></h2>
+        <p><em>only a couple of cats</em><p>
+        </div>
 
       </div>
-        </a>
-
     </div>
-
-
-    <div class="col-md-4 container mobile_column" id="codeEnforcement">
-      <a href="codeEnforcement.html"><img src="img/chris_index.png" alt="a screenshot of a body of text with the City of Boston logo in the top right" class="image">
-        <div class="overlay">
-          <div class="text"> ux of ticketing</div>
-
-
-    </div>
-      </a>
-  </div>
-  <div class="col-md"></div>
-  </div>
-
-  <div class="row  index_row">
-    <div class="col-md"></div>
-
-    <div class="col-md-4 container mobile_column" id="designResearch">
-      <a href="trustpatterns.html"><img src="img/trustpatterns2.png" alt="text that says 'trust patterns' surrounded by three concentric rectangles in shades of grey" class="image">
-        <div class="overlay">
-          <div class="text">design research</div>
-
-    </div>
-      </a>
-  </div>
-
-  <div class="col-md-4 container mobile_column" id="openMRS">
-    <a href="subwayPacman.html"><img src="img/pacman_gif.gif" alt="a gif of the pacman game board in the shape of a subway station. Three pacpeople are moving throughout." class="image">
-      <div class="overlay">
-        <div class="text">subway pacman</div>
-
-  </div>
-  </a>
-</div>
-
-
-  <div class="col-md"></div>
-  </div>
-
-<!--  <div class="row index_row">
-    <div class="col-md"></div>
-    <div class="col-md-4 container mobile_column" id="adoma">
-      <a href="adoma.html"><img src="img/rima.png" alt="an image of a sunny street in france with pink buildings" class="image">
-        <div class="overlay">
-          <div class="text">ux for syrian refugees</div>
-
-
-    </div>
-      </a>
-
-  </div>
-
-
-  <div class="col-md-4 container mobile_column" id="houseBill">
-    <a href="houseBill.html"><img src="img/hb2998_cover.PNG" alt="an image of varied sized circles in different shades of red" class="image">
-      <div class="overlay">
-        <div class="text">house bill factsheet</div>
-  </div>
-    </a>
-</div>
-<div class="col-md"></div>
-</div> -->
-
-  <div class="row  index_row">
-    <div class="col-md"></div>
-
-
-
-  <div class="col-md-4 container mobile_column" id="photography">
-    <a href="farmersMarket.html"><img src="img/MFM_crop.png" alt="a of a map of Massachusetts with several farmers markets highlighted" class="image">
-      <div class="overlay">
-        <div class="text">mapping farmers markets</div>
-
-  </div>
-    </a>
-  </div>
-
-  <div class="col-md-4 container mobile_column" id="migration">
-    <a href="dataViz.html"><img src="img/migration_square.png" alt="a map of the world with countries in different colors and a color scale corresponding to number of migrants" class="image">
-      <div class="overlay">
-        <div class="text">visualizing migration</div>
-
-  </div>
-  </a>
-  </div>
-
-  <div class="col-md"></div>
-  </div>
-
-
-
-  <div class="row  index_row">
-    <div class="col-md"></div>
-
-    <div class="col-md-4 container mobile_column" id="openMRS">
-      <a href="openMRS.html"><img src="img/openMRSscreenshot_crop.png" alt="a screenshot of webpage which says 'OpenMRS'" class="image">
-        <div class="overlay">
-          <div class="text">open source documentation</div>
-
-    </div>
-      </a>
-  </div>
-
-  <div class="col-md-4 container mobile_column" id="photography">
-    <a href="photography.html"><img src="img/bridge_crop.jpg" alt="a black and white photo of a bridge" class="image">
-      <div class="overlay">
-        <div class="text">photography</div>
-
-  </div>
-  </a>
-  </div>
-  <div class="col-md"></div>
-  </div>
-
-  <div class="row  index_row rowbottom">
-    <div class="col-md"></div>
-    <div class="col-md-4 container mobile_column" id="ceramics">
-      <a href="ceramics.html"><img src="img/crackle_crop.jpg" alt="a deep blue ceramic bowl with crackled sides" class="image">
-        <div class="overlay">
-          <div class="text">ceramics </div>
-
-    </div>
-    </a>
-  </div>
-
-
-  <div class="col-md-4 container mobile_column" id="paintings">
-    <a href="paintings.html"> <img src="img/painting_crop.jpg" alt="a mutli canvas painting in many colors with gold paper mâché" class="image">
-      <div class="overlay">
-        <div class="text">paintings</div>
-
-  </div>
-    </a>
-  </div>
-  <div class="col-md"></div>
-  </div>
-
-  <div class="row  index_row">
-    <div class="col-md">
-      <a href="about.html">
-        <p class="small_link mobile_only">| &nbsp about &nbsp |</p>
-
-    </div>
-    </a>
-  </div>
-
-  <div class="row  index_row">
-    <div class="col-md">
-      <a href="https://github.com/evoeges" target="_blank">
-        <p class="made_link">Made with <i data-feather="heart" class="heart_icon"></i> by yours truly. Check me out on GitHub!</p>
-      </a>
-    </div>
-  </div>
-
   </div>
 
   <!--feather icons library-->
