--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
       </div>
       <div class="col-md-6 order-md-1 index_column_left">
         <div class="toc">
-        <h2 class="index_list"><a href="10K.html">Data Capitalism</a></h2>
+      <!--  <h2 class="index_list"><a href="10K.html">Data Capitalism</a></h2>
         <p> <em>user-friendly and accessible microsite for Data 4 Black Lives</em></p>
-        <p class="tags">  user research + UI/UX design + illustration + development</p>
+        <p class="tags">  user research + UI/UX design + illustration + development</p> -->
         <h2 class="index_list"><a href="10KTablets.html">10K Tablets</a></h2>
         <p><em>data and design to bring older adults online </em></p>
         <p class="tags">  user research + service design + UI/UX design + data viz</p>
@@ -60,10 +60,10 @@
         <p><em>  user research + service design + graphic design</em></p>
         <h2><a href="subwayPacman.html">subway pacman</a></h2>
         <p>interactive game concept for subways </p>
-        <p><em>  interaction design + graphic design</em></p>
+        <p><em>  interaction design + graphic design</em></p> -->
         <h2><a href="openMRS.html">open source documentation</a></h2>
-        <p>creation of a new developer guide for a FLOSS software <p>
-        <p><em>  user research + documentation</em></p> -->
+        <p>new developer guide for a OpenMRS, a free and open source medical record system <p>
+        <p><em>  user research + documentation</em></p>
         <h2><a href="ceramics.html">ceramics</a></h2>
         <p><em>just for fun</em><p>
         <h2><a href="photography.html">photography</a></h2>
